Criação das colunas menu e de produtos

--- a/frontend/css/style.scss
+++ b/frontend/css/style.scss
@@ -109,6 +109,18 @@ body{
 }
 
 // BOOTSTRAP COMPONENTS
+.colu {
+width: 20%;
+
+}
+.col-prod {
+margin-right: 50px;
+margin-right: 0px;
+text-align: ;
+}
+.text-h1{
+margin-right: 50px;
+}
 
 .navbar-brand img{
 	width: 300px;
