--- a/frontend/css/style.scss
+++ b/frontend/css/style.scss
@@ -286,10 +286,51 @@ margin-right: 50px;
 .footer{
   background-color: #ffc0b6; 
   width: 100%; 
-
   margin-top: 200px;
 }
+.marca{
+  margin-right: 30px;
 
+}
+.form-control {
+  display: block;
+  width: 170%;
+  height: calc(1.5em + 1.5rem);
+  padding: 0.75rem 1.5rem;
+  font-size: 0.875rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #55595c;
+  background-color: #f7f7f9;
+  background-clip: padding-box;
+  border: 0 solid #ced4da;
+  border-radius: 0;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+a.filtro {
+  list-style-type: none;
+  font-weight: bold;
+  color: rgb(121, 121, 121); 
+  
+}
+.cor-icone{
+  color: rgb(121, 121, 121);
+}
+a.filtro:link, a.filtro:visited{
+  text-decoration: none;
+  color:rgb(121, 121, 121);
+  font-size: 200%;
+
+
+}
+.filtro:hover{
+  text-decoration: none; 
+	color: salmon;
+}
+.filtro:active {
+  color: rgb(0, 49, 0);
+}
 
 .adm-nav-font{
   text-align: center;
@@ -350,8 +391,20 @@ margin-right: 50px;
 }
 
 // OTHERS COMPONENTS
+.card-size{
+  height: 70%;
+  padding: 20px 30px;
 
+}
+.adjust-checkbox-collapse{
+  margin-left: 15px;
+  margin-bottom: 15px;
+}
 
+.titulo{
+  color: rgb(121, 121, 121); 
+  font-weight: bold;
+}
 .menu {
   margin-top: 20px;
   margin-left: 110px;
@@ -378,6 +431,10 @@ li {
 }
 .likAtivo{
   font-weight: bold;
+}
+
+.inline{
+  display: inline-flex;
 }
 
 
