--- a/frontend/css/style.scss
+++ b/frontend/css/style.scss
@@ -292,7 +292,7 @@ margin-right: 50px;
   margin-right: 30px;
 
 }
-.form-control {
+.form-control-select {
   display: block;
   width: 170%;
   height: calc(1.5em + 1.5rem);
