esboço com botões e modals para gerar os relatórios da administração

--- a/frontend/css/style.scss
+++ b/frontend/css/style.scss
@@ -502,6 +502,10 @@ a.filtro:link, a.filtro:visited{
   margin-right: auto;
 }
 
+.adm-modal-table td{
+  text-align: left;
+}
+
 // OTHERS COMPONENTS
 .card-size{
   height: 70%;
