Criação de minhas compras

--- a/frontend/css/style.scss
+++ b/frontend/css/style.scss
@@ -290,7 +290,14 @@ textarea.form-control {
   width: 50%;
   
 }
+//MINHA CONTA
+.img-compras{
+  width: 5rem;
+}
 
+.align-compras{
+  margin-right: 300px;
+}
 
 //RASTREAR 
 .bs-wizard {margin-top: 40px;}
