iniciada a implementação do dashboard com os relatórios e visão geral sobre a empresa

--- a/frontend/css/style.scss
+++ b/frontend/css/style.scss
@@ -730,3 +730,19 @@ input::-webkit-inner-spin-button {
 input[type=number] {
     -moz-appearance:textfield; /* Firefox */
 }
+
+.cor-salmao{
+  color: $salmao;
+}
+
+.cor-bg-salmao-dark{
+  background-color: $salmao-dark;
+}
+
+.cor-salmao-dark{
+  color: $salmao-dark;
+}
+
+.cor-bg-teal{
+  background-color: $teal;
+}
