Atualiazando minhas compras e o rastrear

--- a/frontend/css/style.scss
+++ b/frontend/css/style.scss
@@ -312,8 +312,18 @@ textarea.form-control {
   color: rgb(121, 121, 121); 
   font-weight: bold;
 }
-
+p.text-compras{
+  margin-top: 20px;
+  margin-left: 20px;
+}
+.negrito{
+  font-weight: bold;
+}
 //RASTREAR 
+
+
+.bs-wizard {margin-top: 40px;}
+
 .bs-wizard {margin-top: 40px;}
 
 /*Form Wizard*/
