finalização das telas de rastreamento, tanto para o sistema do cliente quanto administração

--- a/frontend/css/style.scss
+++ b/frontend/css/style.scss
@@ -815,6 +815,10 @@ input[type=number] {
 .cor-teal{
   color: $teal;
 }
+
+.cor-bg-teal-light{
+  background-color: #f0fdf7;
+}
 // ####################### FIM CORES E BG-CORES #######################
 
 
