--- a/frontend/css/style.scss
+++ b/frontend/css/style.scss
@@ -217,6 +217,36 @@ margin-right: 50px;
 }
 // ####################### FIM OFFS #######################
 
+// ###################### FINALIZAR COMPRAS #####################
+
+.fil {
+  width: 50%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+ .bott  {
+  width: 50%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  align-items: center;
+}
+
+D:hover {
+  background-color: #45a049;
+}
+
+// ######################## FIM DO FINALIZAR COMPRAS ##############################
+
 
 // ####################### PRODUTOS DETALHADOS #######################
 .forma-texto{
