--- a/frontend/css/style.scss
+++ b/frontend/css/style.scss
@@ -686,6 +686,9 @@ li {
   display: inline-flex;
 }
 
+._login-cadastro{
+  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
+}
 
 .login-register{
     width: 50%;
